package pt.isep.psoft.alsafe.flightroutes.domain;

public enum FlightStatus {
    SCHEDULED,
    CANCELED,
    COMPLETED
}